--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -319,15 +319,15 @@
         </div>
       </div>
       <!-- search form -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
+{#      <form action="#" method="get" class="sidebar-form">#}
+{#        <div class="input-group">#}
+{#          <input type="text" name="q" class="form-control" placeholder="Search...">#}
+{#              <span class="input-group-btn">#}
+{#                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>#}
+{#                </button>#}
+{#              </span>#}
+{#        </div>#}
+{#      </form>#}
       <!-- /.search form -->
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu">
@@ -342,6 +342,21 @@
           <ul class="treeview-menu">
             <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
             <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+          </ul>
+        </li>
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-pie-chart"></i>
+            <span>Market</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="market/sw"><i class="fa fa-circle-o"></i> SW</a></li>
+            <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+            <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+            <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -504,8 +519,8 @@
     </section>
     <!-- /.sidebar -->
   </aside>
-        {% block content %}
-        {% endblock %}
+    {% block content %}
+    {% endblock %}
   <!-- Content Wrapper. Contains page content -->
 
   <!-- /.content-wrapper -->
@@ -753,7 +768,10 @@
 {#<!-- AdminLTE for demo purposes -->#}
 {#<script src="dist/js/demo.js"></script>#}
 <script src="{% static 'js/app.min.js' %}"></script>
-<script src="{% static 'js/pages/dashboard.js' %}"></script>
+{#<script src="{% static 'js/pages/dashboard.js' %}"></script>#}
 <script src="{% static 'js/demo.js' %}"></script>
+{#<script src="{% static 'jquery/dist/jquery.min.js' %}"></script>#}
+
+{% block extra_js %} {% endblock %}
 </body>
 </html>
