--- a/market/templates/sw_backup.html
+++ b/market/templates/sw_backup.html
@@ -1,46 +1,5 @@
-{% extends "base.html" %}
-{% block content %}
-    <form>
-    <div>
-        <label for="code">Select industry code</label>
-        <select id="code" name="code">
-            <option value="801010">农林牧渔</option>
-            <option value="801020">采掘</option>
-            <option value="801030">化工</option>
-            <option value="801040">钢铁</option>
-            <option value="801050">有色金属</option>
-            <option value="801080">电子</option>
-            <option value="801110">家用电器</option>
-            <option value="801120">食品饮料</option>
-            <option value="801130">纺织服装</option>
-            <option value="801140">轻工制造</option>
-            <option value="801150" selected>医药生物</option>
-            <option value="801160">公用事业</option>
-            <option value="801170">交通运输</option>
-            <option value="801180">房地产</option>
-            <option value="801200">商业贸易</option>
-            <option value="801210">休闲服务</option>
-            <option value="801230">综合</option>
-            <option value="801710">建筑材料</option>
-            <option value="801720">建筑装饰</option>
-            <option value="801730">电气设备</option>
-            <option value="801740">国防军工</option>
-            <option value="801750">计算机</option>
-            <option value="801760">传媒</option>
-            <option value="801770">通信</option>
-            <option value="801780">银行</option>
-            <option value="801790">非银金融</option>
-            <option value="801880">汽车</option>
-            <option value="801890">机械设备</option>
-        </select>
-    </div>
-</form>
-<div id="container" style="width:100%; height:400px;"></div>
-{% endblock %}
-
-{% block extra_js %}
-
-{#<script src="../static/jquery/dist/jquery.min.js"></script>#}
+<html>
+<script src="../static/jquery/dist/jquery.min.js"></script>
 <script src="../static/highcharts/highcharts.js"></script>
 <script>
 function render(code){
@@ -158,7 +117,6 @@ function render(code){
     }
 
 $(function () {
-    console.log("****haha***");
     render('801150');
 
     $( "#code" ).change(function() {
@@ -167,5 +125,40 @@ $(function () {
 });
 });
 </script>
-{% endblock %}
-
+<form>
+    <div>
+        <label for="code">Select industry code</label>
+        <select id="code" name="code">
+            <option value="801010">农林牧渔</option>
+            <option value="801020">采掘</option>
+            <option value="801030">化工</option>
+            <option value="801040">钢铁</option>
+            <option value="801050">有色金属</option>
+            <option value="801080">电子</option>
+            <option value="801110">家用电器</option>
+            <option value="801120">食品饮料</option>
+            <option value="801130">纺织服装</option>
+            <option value="801140">轻工制造</option>
+            <option value="801150" selected>医药生物</option>
+            <option value="801160">公用事业</option>
+            <option value="801170">交通运输</option>
+            <option value="801180">房地产</option>
+            <option value="801200">商业贸易</option>
+            <option value="801210">休闲服务</option>
+            <option value="801230">综合</option>
+            <option value="801710">建筑材料</option>
+            <option value="801720">建筑装饰</option>
+            <option value="801730">电气设备</option>
+            <option value="801740">国防军工</option>
+            <option value="801750">计算机</option>
+            <option value="801760">传媒</option>
+            <option value="801770">通信</option>
+            <option value="801780">银行</option>
+            <option value="801790">非银金融</option>
+            <option value="801880">汽车</option>
+            <option value="801890">机械设备</option>
+        </select>
+    </div>
+</form>
+<div id="container" style="width:100%; height:400px;"></div>
+</html>
