--- a/market/templates/stock_history.html
+++ b/market/templates/stock_history.html
@@ -1,5 +1,29 @@
-<html>
-<script src="../static/jquery/dist/jquery.min.js"></script>
+{% extends "base.html" %}
+{% block content %}
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <h1>
+        Market
+        <small>Stock History</small>
+      </h1>
+      <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Dashboard</li>
+      </ol>
+    </section>
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+            <section class="col-xs-12">
+                <div id="container" style="width:100%; height:400px;"></div>
+                            </section>
+            </div>
+    </section>
+</div>
+{% endblock %}
+
+{% block extra_js %}
 <script src="../static/highcharts/highcharts.js"></script>
 <script>
 function render(code){
@@ -111,5 +135,4 @@ $(function () {
     render('{{ code }}');
 });
 </script>
-<div id="container" style="width:100%; height:400px;"></div>
-</html>
+{% endblock %}
