--- a/market/templates/sw.html
+++ b/market/templates/sw.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <h1>
+        Market
+        <small>SW Index</small>
+      </h1>
+      <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Dashboard</li>
+      </ol>
+    </section>
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+            <section class="col-xs-12">
     <form>
     <div>
         <label for="code">Select industry code</label>
@@ -36,11 +52,13 @@
     </div>
 </form>
 <div id="container" style="width:100%; height:400px;"></div>
+            </section>
+            </div>
+    </section>
+</div>
 {% endblock %}
 
 {% block extra_js %}
-
-{#<script src="../static/jquery/dist/jquery.min.js"></script>#}
 <script src="../static/highcharts/highcharts.js"></script>
 <script>
 function render(code){
