--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -353,10 +353,11 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="market/sw"><i class="fa fa-circle-o"></i> SW</a></li>
-            <li><a href="market/history"><i class="fa fa-circle-o"></i> History</a></li>
-            <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-            <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+            <li><a href="/market/sw"><i class="fa fa-circle-o"></i> SW</a></li>
+            <li><a href="/market/history"><i class="fa fa-circle-o"></i> History</a></li>
+            <li><a href="/market/sh"><i class="fa fa-circle-o"></i> SH PE</a></li>
+            <li><a href="/market/diff"><i class="fa fa-circle-o"></i> Diff</a></li>
+            <li><a href="/market/cix"><i class="fa fa-circle-o"></i> CIX</a></li>
           </ul>
         </li>
         <li class="treeview">
