--- a/market/templates/sw.html
+++ b/market/templates/sw.html
@@ -108,7 +108,7 @@ function render(code){
                         text: 'PE'
                     },
                     plotLines: [{
-                    color: '#000',
+                    color: 'black',
                     dashStyle: 'Dash', //Dash,Dot,Solid,默认Solid
                     width: 1.5,
                     value: averagePE,
@@ -117,7 +117,7 @@ function render(code){
                         text: 'average PE:'+averagePE,
                         align: 'center',
                         style: {
-                            color: 'red'
+                            color: 'black'
                         }
                     }
                 }],
