--- a/market/templates/cix.html
+++ b/market/templates/cix.html
@@ -19,6 +19,24 @@
                 <div id="container" style="width:100%; height:400px;"></div>
                             </section>
             </div>
+        <div>
+            <p>SH PE:{{ cix.pe }}&nbsp;&nbsp;&nbsp;&nbsp;15</p>
+            <p>Low PB:{{ cix.low_pb }}&nbsp;&nbsp;&nbsp;&nbsp;10%</p>
+            <p>AH:{{ cix.ah }}&nbsp;&nbsp;&nbsp;&nbsp;100</p>
+            <p>High Price:{{ cix.high_price }}&nbsp;&nbsp;&nbsp;&nbsp;3%</p>
+            <p>
+                2005年6月最低点时_申万一级指数PE中位数20.08，PB中位数1.55(无破净)，均价中位数4.6（无价格10以上行业)，股息率1.31，换手率0.91.
+                </p>
+            <p>
+2007年10月16日6124点时申万一级指数PE中位数65.86（仅1个行业超过100），PB中位数6.45(有色、采掘、食品饮料超过10倍)，均价中位数18.37，股息率0.34，换手率2.59.
+                </p>
+            <p>
+2014年3月_最低点时申万一级指数PE中位数29.83，PB中位数2.28(银行0.88和黑色金属0.76破净)，均价中位数11.54，股息率1.16，换手率1.02.
+                </p>
+            <p>
+2015年6月15日最高点申万一级指数PE中位数75.15（11个行业PE超过100），PB中位数5.86(计算机和传媒超过10倍)，均价中位数29.96，股息率0.39，换手率4.24
+            </p>
+        </div>
     </section>
 </div>
 {% endblock %}
