--- a/market/templates/cix.html
+++ b/market/templates/cix.html
@@ -20,10 +20,10 @@
                             </section>
             </div>
         <div>
-            <p>SH PE:{{ cix.pe }}&nbsp;&nbsp;&nbsp;&nbsp;15</p>
-            <p>Low PB:{{ cix.low_pb }}&nbsp;&nbsp;&nbsp;&nbsp;10%</p>
-            <p>AH:{{ cix.ah }}&nbsp;&nbsp;&nbsp;&nbsp;100</p>
-            <p>High Price:{{ cix.high_price }}&nbsp;&nbsp;&nbsp;&nbsp;3%</p>
+            <p>SH PE:{{ cix.pe }}&nbsp;&nbsp;&nbsp;&nbsp;Threshold:20</p>
+            <p>Low PB:{{ cix.low_pb }}&nbsp;Threshold:10%</p>
+            <p>AH:{{ cix.ah }}&nbsp;&nbsp;&nbsp;&nbsp;Threshold:100</p>
+            <p>High Price:{{ cix.high_price }}&nbsp;&nbsp;&nbsp;&nbsp;Threshold:3%</p>
             <p>
                 2005年6月最低点时_申万一级指数PE中位数20.08，PB中位数1.55(无破净)，均价中位数4.6（无价格10以上行业)，股息率1.31，换手率0.91.
                 </p>
