--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -350,6 +350,8 @@
             </span>
           </a>
           <ul class="treeview-menu">
+            <li><a href="/market/csi"><i class="fa fa-circle-o"></i> CSI</a></li>
+            <li><a href="/market/industry"><i class="fa fa-circle-o"></i> Industry</a></li>
             <li><a href="/market/sw"><i class="fa fa-circle-o"></i> SW</a></li>
             <li><a href="/market/history"><i class="fa fa-circle-o"></i> History</a></li>
             <li><a href="/market/sh"><i class="fa fa-circle-o"></i> SH PE</a></li>
