--- a/market/templates/cs_index.html
+++ b/market/templates/cs_index.html
@@ -20,34 +20,6 @@
     <div>
         <label for="code">Select index</label>
         <select id="code" name="code">
-            <option value="801010">农林牧渔</option>
-            <option value="801020">采掘</option>
-            <option value="801030">化工</option>
-            <option value="801040">钢铁</option>
-            <option value="801050">有色金属</option>
-            <option value="801080">电子</option>
-            <option value="801110">家用电器</option>
-            <option value="801120">食品饮料</option>
-            <option value="801130">纺织服装</option>
-            <option value="801140">轻工制造</option>
-            <option value="801150" selected>医药生物</option>
-            <option value="801160">公用事业</option>
-            <option value="801170">交通运输</option>
-            <option value="801180">房地产</option>
-            <option value="801200">商业贸易</option>
-            <option value="801210">休闲服务</option>
-            <option value="801230">综合</option>
-            <option value="801710">建筑材料</option>
-            <option value="801720">建筑装饰</option>
-            <option value="801730">电气设备</option>
-            <option value="801740">国防军工</option>
-            <option value="801750">计算机</option>
-            <option value="801760">传媒</option>
-            <option value="801770">通信</option>
-            <option value="801780">银行</option>
-            <option value="801790">非银金融</option>
-            <option value="801880">汽车</option>
-            <option value="801890">机械设备</option>
         </select>
     </div>
 </form>
@@ -63,9 +35,9 @@
 <script>
 function render(code){
     console.log("render chart with code***"+code);
-    $.getJSON('http://localhost:8000/api/cs?name='+code, function (data) {
+    $.getJSON('http://localhost:8000/api/csi?name='+code, function (data) {
         console.log(data);
-        {#averagePB = data['PB_avg'];#}
+        averagePB = data['PB_avg'];
         averagePE = data['PE_avg'];
         {#console.log(averagePB);#}
         console.log(averagePE);
@@ -74,7 +46,7 @@ function render(code){
                 zoomType: 'x'
             },
             title: {
-                text: 'CS index over time'
+                text: 'CS index over time {{ name }}'
             },
             subtitle: {
                 text: document.ontouchstart === undefined ?
@@ -176,7 +148,7 @@ function render(code){
     }
 
 $(function () {
-    render('HSCEI');
+    render('上海A股');
 
     $( "#code" ).change(function() {
     var code = $(this).val();
