update #87 parse equity data from cs index

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -338,7 +338,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/market/csi"><i class="fa fa-circle-o"></i> CSI</a></li>
+            <li><a href="/market/csi"><i class="fa fa-circle-o"></i> Index</a></li>
             <li><a href="/market/industry"><i class="fa fa-circle-o"></i> Industry</a></li>
             <li><a href="/market/equity"><i class="fa fa-circle-o"></i> Equity</a></li>
             <li><a href="/market/sw"><i class="fa fa-circle-o"></i> SW</a></li>
