--- a/market/templates/industry.html
+++ b/market/templates/industry.html
@@ -136,11 +136,11 @@ function render(code){
                 }
             },
             series: [{
-                type: 'area',
+                type: 'line',
                 name: 'PB',
                 data: data['PB']
             },{
-                type: 'area',
+                type: 'line',
                 name: 'PE',
                 yAxis: 1,
                 data: data['PE']
