--- a/market/templates/sh.html
+++ b/market/templates/sh.html
@@ -113,7 +113,7 @@ function render(){
             series: [{
                 type: 'line',
                 name: 'PE',
-                data: data['pe_list']
+                data: data['PE']
             }]
         });
     });
