--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -46,10 +46,8 @@
                         <th>{% trans "Amount" %}</th>
                         <th>Current</th>
                         <th class="sort" data-sort="market"><i class="fa fa-sort"></i>Market</th>
-                        <th class="sort" data-sort="percentage"><i class="fa fa-sort"></i>percentage</th>
-                        <th>Modify</th>
-                        <th>Remove</th>
-                        <th>Tag</th>
+                        <th class="sort" data-sort="market"><i class="fa fa-sort"></i>ratio(%)</th>
+                        <th class="sort" data-sort="percentage"><i class="fa fa-sort"></i>percentage(%)</th>
                     </tr>
                 </thead>
                 <tbody class="list">
@@ -65,10 +63,8 @@
                                     0
                                 {% endif %}
                             </td>
+                            <td>{{ stock.ratio }}</td>
                             <td>{{stock.percentage}}</td>
-                            <td><a data-value="{{ stock.code }}" class="btn btn-default modify" href="#"><i class="fa fa-pencil fa-fw"></i> Modify</a></td>
-                            <td><a data-value="{{ stock.code }}" class="btn btn-danger delete" href="#"><i class="fa fa-trash-o fa-lg"></i> Delete</a></td>
-                            <td>{{stock.tags }}</td>
                         </tr>
                     {%endfor%}
                 </tbody>
